log
Mon Mar 29 22:30:42 UTC 2021: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c=a+b;
     ^
exercises.c:17:11: error: ‘return’ with a value, in function returning void [-Werror]
    return c;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c)
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 29 22:31:26 UTC 2021: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c=a+b;
     ^
exercises.c:17:11: error: ‘return’ with a value, in function returning void [-Werror]
    return 0;
           ^
exercises.c:14:6: note: declared here
 void suma(int a, int b, int * c)
      ^~~~
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 29 22:31:42 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:16:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c=a+b;
     ^
cc1: all warnings being treated as errors
Compilation failed
Mon Mar 29 22:31:56 UTC 2021: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
8204b30
Mon Mar 29 22:34:59 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
911740d
Mon Mar 29 22:43:29 UTC 2021: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ae1f38c
Mon Mar 29 22:43:55 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
c0c4b1c
Mon Mar 29 22:44:38 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b5b4e8d
Mon Mar 29 22:46:44 UTC 2021: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e17aa0a
Mon Mar 29 22:47:43 UTC 2021: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  1|6
total_score: 10/70
33739bc
Mon Mar 29 22:48:14 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e980916
Mon Mar 29 22:48:31 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e1b937c
Mon Mar 29 22:48:39 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e2fcfaf
Mon Mar 29 22:49:54 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
d1cc84a
Mon Mar 29 22:50:13 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1f774db
Mon Mar 29 22:50:29 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
19a5c04
Mon Mar 29 22:50:53 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e3bb877
